# Learning-OpenGL

./: .gitignore  CMakeLists.txt  README.md  run.sh
resource/shaders/: default.frag  default.vert
src/: glad.c  main.cpp
src/camera/: camera.cpp  camera.h
src/object/: EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/shader/: shader.cpp  shader.h  shaderClass.cpp  shaderClass.h
src/texture/: texture.cpp  texture.h
